[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.0"
ring = "0.16.20"
generic-array = "0.14.7"
hex = "0.4.3"
rpassword = "7.2.0"
